--- a/css/main.css
+++ b/css/main.css
@@ -272,6 +272,7 @@ body {
 }
 
 #overlay {
+    z-index: -1;
     position: absolute;
     top: 0;
     left: 0;
@@ -282,6 +283,7 @@ body {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
+    transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 #overlay a {
@@ -303,4 +305,8 @@ body {
 .engulf {
     transform: scale(150) !important;
     display: block !important;
+}
+
+.overlay-show{
+    z-index: 1 !important;
 }
