--- a/css/base.css
+++ b/css/base.css
@@ -42,6 +42,7 @@ body {
 }
 
 .rightnav {
+    position: relative;
     color: white;
     text-decoration: none;
     font-family: 'SF UI Display Bold';
@@ -52,6 +53,28 @@ body {
     -moz-osx-font-smoothing: grayscale;
     margin-right: 30px;
 }
+
+nav>a{
+    padding-bottom: 10px;
+}
+nav>a::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: white;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out 0s;
+}
+
+nav>a:hover::before {
+    visibility: visible;
+    transform: scaleX(1);
+}
+
 
 #logo {
     color: black;
@@ -90,6 +113,10 @@ body {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
+}
+
+#github:hover{
+    opacity: .7;
 }
 
 #footer {
