--- a/css/base.css
+++ b/css/base.css
@@ -1,218 +1,72 @@
 @font-face {
     font-family: "SF UI Display Light";
-    src:  url('/fonts/SF-UI-Display-Light.woff2') format('woff2'),
+    src: url('/fonts/SF-UI-Display-Light.woff2') format('woff2'),
         url('/fonts/SF-UI-Display-Light.woff') format('woff');
 }
 
 @font-face {
     font-family: "SF UI Display Bold";
-    src:  url('/fonts/SF-UI-Display-Bold.woff2') format('woff2'),
+    src: url('/fonts/SF-UI-Display-Bold.woff2') format('woff2'),
         url('/fonts/SF-UI-Display-Bold.woff') format('woff');
 }
 
 @font-face {
     font-family: "SF UI Display Black";
-    src:  url('/fonts/SF-UI-Display-Black.woff2') format('woff2'),
+    src: url('/fonts/SF-UI-Display-Black.woff2') format('woff2'),
         url('/fonts/SF-UI-Display-Black.woff') format('woff');
 }
 
 html {
-    /* height: 100vh; */
-    height: calc(var(--vh, 1vh) * 100);
+    height: 100%;
+    min-height: 100%;
+    width: 100%;
+    min-width: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    /* position: fixed; */
 }
 
 body {
-    /* height: 97vh; */
-    height: calc(var(--vh, 1vh) * 97);
-    width: 100vw;
-    margin: 0;
-    padding: 0;
-    background-color: white;
-    position: absolute;
-}
-
-#navbar {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin: auto;
-    width: 80%;
-    height: calc(var(--vh, 1vh) * 10);
-}
-
-.leftnav {
-    flex-grow: 1;
-}
-
-.rightnav {
-    position: relative;
-    color: white;
-    text-decoration: none;
-    font-family: 'SF UI Display Bold';
-    font-size: 1.5rem;
-    font-style: normal;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-stroke-width: 0px;
-    -moz-osx-font-smoothing: grayscale;
-    margin-right: 30px;
-}
-
-nav>a{
-    padding-bottom: 10px;
-}
-
-nav>a::before {
-    content: "";
-    position: absolute;
+    height: 100%;
+    min-height: 100%;
     width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: white;
-    visibility: hidden;
-    transform: scaleX(0);
-    transition: all 0.3s ease-in-out 0s;
+    min-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    /* position: fixed; */
 }
 
-nav>a:hover::before {
-    visibility: visible;
-    transform: scaleX(1);
+#mainContainer {
+    width: 100%;
+    min-width: 100%;
+    height: 100%;
+    min-height: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
-
-#logo {
-    color: black;
-    text-decoration: none;
-    font-family: 'SF UI Display Black';
-    font-size: 3.5rem;
-    font-style: normal;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-stroke-width: 0px;
-    -moz-osx-font-smoothing: grayscale;
-}
-
+/* Background and mobile controls */
 #bg-circle {
     position: absolute;
-    top: -10%;
-    right: 0;
+    top: -50vw;
+    right: -28vw;
     z-index: -1;
-    max-width: 47%;
-    height: auto;
-}
-
-#hero {
-    height: calc(var(--vh, 1vh) * 75);
-    /* border: 3px solid green; */
-    width: 60%;
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-}
-
-.col {
-    /* border: 3px solid orange; */
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-}
-
-#github:hover{
-    opacity: .7;
-}
-
-#footer {
-    /* border: 3px solid red; */
-    width: 60%;
-    margin: auto;
-    margin-top: 3vh;
-    height: calc(var(--vh, 1vh) * 7);
-    display: flex;
-    flex-flow: column nowrap;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    font-family: 'SF UI Display Bold';
-    color: black;
-    font-style: normal;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-stroke-width: 0px;
-    -moz-osx-font-smoothing: grayscale;
-    margin-bottom: 0;
-}
-
-@media only screen and (max-width: 1130px) {
-    #navbar {
-        width: 95%;
-    }
-
-    #logo {
-        font-size: 3rem;
-    }
-
-    #hero {
-        width: 80%;
-    }
-}
-
-@media only screen and (max-width: 900px) {
-    #navbar {
-        width: 100%;
-    }
-
-    .rightnav {
-        display: none;
-    }
-
-    #hamburger {
-        position: relative;
-        z-index: 2;
-        margin-right: 20px;
-    }
-
-    #hero {
-        width: 90%;
-    }
-}
-
-@media only screen and (max-width: 660px) {
-    #hero {
-        width: 90%;
-        flex-direction: column;
-        height: calc(var(--vh, 1vh) * 120);
-        justify-content: center;
-        align-items: center;
-    }
-
-    .col {
-        margin: 12vh 0vh 0vh 0vh;
-    }
-
-    #logo {
-        font-size: 2.5rem;
-    }
-
-    #github {
-        height: 55px;
-    }
-}
-
-@media only screen and (min-width: 900px) {
-    #hamburger {
-        display: none;
-    }
-}
-
-@media only screen and (max-height: 650px) {
-    .col:nth-child(1) {
-        margin-top: calc(var(--vh, 1vh) * 20);
-    }
-
-    #hero {
-        height: calc(var(--vh, 1vh) * 160);
-    }
+    width: 75vw;
+    height: 75vw;
+    border-radius: 50%;
+    background-color: #147efb;
 }
 
 #menu-circle {
@@ -228,22 +82,19 @@ nav>a:hover::before {
     transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
-.show-links {
-    display: block !important;
-}
-
 #overlay {
     z-index: -1;
     position: absolute;
     top: 0;
     left: 0;
-    height: calc(var(--vh, 1vh) * 100);
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
     display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
     align-items: center;
+    justify-content: center;
     transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -258,9 +109,13 @@ nav>a:hover::before {
     -webkit-font-smoothing: antialiased;
     -webkit-text-stroke-width: 0px;
     -moz-osx-font-smoothing: grayscale;
-    margin-bottom: calc(var(--vh, 1vh) * 10);
     display: none;
     transition: all 1s cubic-bezier(0.19, 1, 0.22, 1);
+    margin-bottom: 10vh;
+}
+
+#overlay a:last-of-type {
+    margin-bottom: 0;
 }
 
 .engulf {
@@ -275,4 +130,195 @@ nav>a:hover::before {
 .is-open::before {
     transform: scale(1);
     visibility: visible;
+}
+
+.show-links {
+    display: block !important;
+}
+
+/* Navbar Styles */
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0;
+    width: 90%;
+    margin-top: 10px;
+}
+
+#logo {
+    color: black;
+    text-decoration: none;
+    font-family: 'SF UI Display Black';
+    font-size: 3rem;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0px;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.rightnav a {
+    position: relative;
+    color: white;
+    text-decoration: none;
+    font-family: 'SF UI Display Bold';
+    font-size: 1.5rem;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0px;
+    -moz-osx-font-smoothing: grayscale;
+    margin-right: 30px;
+    padding-bottom: 8px;
+}
+
+.rightnav a:last-of-type {
+    margin-right: 0;
+}
+
+@media (max-width: 1000px) {
+    .navbar {
+        width: 90%;
+    }
+
+    .rightnav a {
+        font-size: 1.3rem;
+    }
+
+    #bg-circle {
+        right: -23vw;
+    }
+}
+
+@media (max-width: 900px) {
+    .rightnav a {
+        display: none;
+    }
+
+    #bg-circle {
+        right: -30vw;
+        top: -40vw;
+    }
+
+    #hamburger {
+        position: relative;
+        z-index: 2;
+    }
+}
+
+/* Hover underline */
+nav>a::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: white;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.15s ease-in-out 0s;
+}
+
+nav>a:hover::before {
+    visibility: visible;
+    transform: scaleX(1);
+}
+
+/* Hide Hambuger if over 900px */
+@media only screen and (min-width: 900px) {
+    #hamburger {
+        display: none;
+    }
+}
+
+@media (max-width: 600px) {
+
+    html,
+    body {
+        max-width: 100vw;
+    }
+
+    #logo {
+        font-size: 2.3rem;
+    }
+}
+
+@media (max-width: 500px) {
+    .navbar {
+        width: 95%;
+    }
+
+    #logo {
+        font-size: 2rem;
+    }
+
+    .social-logo {
+        height: 45px !important;
+    }
+
+    .links-row a {
+        font-size: 14px;
+    }
+}
+
+
+/* Footer styles */
+.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    margin-top: 15px;
+}
+
+.social-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.social-logo {
+    height: 50px;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+.links-row {
+    color: black;
+    text-decoration: none;
+    font-family: 'SF UI Display Bold';
+    font-size: 16px;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0px;
+    -moz-osx-font-smoothing: grayscale;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.links-row a {
+    margin: 3px 5px 3px 5px;
+    text-decoration: none;
+    color: black;
+    transition: .15s ease-in-out;
+}
+
+.links-row a:hover {
+    cursor: pointer;
+    color: rgb(141, 141, 141);
+}
+
+#copyright {
+    color: black;
+    text-decoration: none;
+    font-family: 'SF UI Display Bold';
+    font-size: 16px;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0px;
+    -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    margin-bottom: 10px;
 }
