--- a/css/base.css
+++ b/css/base.css
@@ -17,20 +17,20 @@
 }
 
 html {
-    height: 100%;
-    min-height: 100%;
-    width: 100%;
-    min-width: 100%;
+    height: 100vh;
+    min-height: 100vh;
+    width: 100vw;
+    min-width: 100vw;
     overflow-x: hidden;
     overflow-y: scroll;
-    /* position: fixed; */
+    position: fixed;
 }
 
 body {
-    height: 100%;
-    min-height: 100%;
-    width: 100%;
-    min-width: 100%;
+    height: 100vh;
+    min-height: 100vh;
+    width: 100vw;
+    min-width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -38,14 +38,14 @@ body {
     margin: 0;
     overflow-x: hidden;
     overflow-y: scroll;
-    /* position: fixed; */
+    position: fixed;
 }
 
 #mainContainer {
-    width: 100%;
-    min-width: 100%;
-    height: 100%;
-    min-height: 100%;
+    width: 100vw;
+    min-width: 100vw;
+    height: 100vh;
+    min-height: 100vh;
     overflow-y: scroll;
     overflow-x: hidden;
     position: fixed;
