--- a/css/base.css
+++ b/css/base.css
@@ -16,14 +16,20 @@
         url('/fonts/SF-UI-Display-Black.woff') format('woff');
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+    /* make scrollbar transparent */
+}
+
 html {
     height: 100vh;
     min-height: 100vh;
     width: 100vw;
     min-width: 100vw;
     overflow-x: hidden;
-    overflow-y: scroll;
     position: fixed;
+    display: block;
 }
 
 body {
@@ -31,13 +37,9 @@ body {
     min-height: 100vh;
     width: 100vw;
     min-width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    display: block;
     margin: 0;
     overflow-x: hidden;
-    overflow-y: scroll;
     position: fixed;
 }
 
@@ -46,9 +48,10 @@ body {
     min-width: 100vw;
     height: 100vh;
     min-height: 100vh;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    position: fixed;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
