--- a/css/faq.css
+++ b/css/faq.css
@@ -35,17 +35,10 @@
     text-align: left;
     border-radius: 7px;
     border: none;
-    padding: 13px;
+    padding: 0 13px;
     min-height: auto;
     margin-top: 3px;
     transition: .15s ease-in-out;
-    color: black;
-    text-decoration: none;
-    font-family: 'SF UI Display Bold';
-    font-style: normal;
-    -webkit-font-smoothing: antialiased;
-    -webkit-text-stroke-width: 0px;
-    -moz-osx-font-smoothing: grayscale;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -55,13 +48,24 @@
     background-color: #147efb;
 }
 
+.accordion p {
+    color: black;
+    text-decoration: none;
+    font-family: 'SF UI Display Bold';
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0px;
+    -moz-osx-font-smoothing: grayscale;
+    margin: 13px 0;
+}
+
 .active {
     background-color: #147efb;
 }
 
 .panel {
-    padding: 0 18px;
-    width: calc(100% - 36px);
+    padding: 0 13px;
+    width: 100%;
     background-color: #e4e4e4;
     max-height: 0;
     min-height: 0;
